# research-rainfallradar

./: .gitignore  README.md  package-lock.json  package.json  research-rainfallradar overview.drawio
aimodel/: pyproject.toml  requirements.txt  slurm-TEST-deeplabv3p-rainfall.job  slurm-TEST-deeplabv3p.job  slurm-encoderonly-rainfall.job  slurm-pretrain-plot.job  slurm-pretrain-predict.job  slurm-pretrain.job  slurm-train-mono.job  slurm-train.job
aimodel/scripts/: crossval-stbl.py  metric-multiplot.py  stbl-crossval.py
aimodel/src/: Matplotlib heatmap test.ipynb  UMAP-Random.ipynb  Upsampling2D_comparison.ipynb  deeplabv3_plus_test.py  deeplabv3_plus_test_rainfall.py  encoderonly_test_rainfall.py  index.py  parse_args.py  plot_metrics.py  plot_metrics_multi.py  rainfallwater_data_explorer.ipynb  rainfallwater_embed_dataset_explorer.ipynb  rainfallwater_identity_TEST.ipynb  rrdlr-weightings-calculate.py  rrdlr-weightings-plot.py  rrdlr_calculate_sums.py  rrdlr_weightings_plot.py  tfinspect.py
aimodel/src/lib/ai/: RainfallWaterContraster.py  RainfallWaterMono.py  RainfallWaterSegmenter.py  RainfallWaterSegmentor.py  model_rainfallwater_contrastive.py  model_rainfallwater_mono.py  model_rainfallwater_segmentation.py
aimodel/src/lib/ai/components/: LossDice.py  (+21 more)
aimodel/src/lib/dataset/: batched_iterator.py  dataset.py  dataset_encoderonly.py  dataset_mono.py  dataset_segmenter.py  get_from_batched_dataset.py  parse_heightmap.py  read_metadata.py  shuffle.py
aimodel/src/lib/io/: find_paramsjson.py  handle_open.py  readfile.py  writefile.py
aimodel/src/lib/primitives/: env.py
aimodel/src/lib/vis/: embeddings.py  segmentation_plot.py
aimodel/src/subcommands/: pretrain.py  pretrain_plot.py  pretrain_predict.py  rainfall_stats.py  train.py  train_mono.py  train_mono_predict.py  train_predict.py
(+50 files in other folders)
