[project]
name = "research-rainfallradar"
description = "A model to predict water depth data from rainfall radar information"
readme = "../README.md"
version = "1.0"
licennse = { text = "AGPL-3.0" }

keywords = [ "rainfall-radar", "water-depth-prediction", "deep-learning", "deeplabv3+", "image-segmentation", "hydrological-modeling", "flood-forecasting", "ai", "machine-learning", "tensorflow" ]
classifiers = [
	"License :: OSI Approved :: GNU Affero General Public License v3",
	"Development Status :: 4 - Beta",
	"Intended Audience :: Science/Research",
	"Intended Audience :: Meterologists",
	"Environment :: Console",
	"Environment :: GPU",
	"Operating System :: POSIX",
	"Operating System :: POSIX :: Linux",
	"Topic :: Scientific/Engineering",
	"Topic :: Scientific/Engineering :: GIS",
	"Topic :: Scientific/Engineering :: Atmospheric Science",
	"Topic :: Scientific/Engineering :: Artificial Intelligence"
]

authors = [
	{ name = "Starbeamrainbowlabs", email = "sbrl@starbeamrainbowlabs.com" }
]
maintainers = [
	{ name = "Starbeamrainbowlabs", email = "sbrl@starbeamrainbowlabs.com" }
]


requires-python = ">= 3.10"

dependencies = [
	"tensorflow>=2.4",
	# "tensorflow_addons",
	"keras_cv",
	"silence_tensorflow",
	"loguru",
	"umap-learn[plot]",
	"seaborn",
	"matplotlib",
	"numpy",
	"pandas"
]

[project.urls]
Homepage = "https://github.com/sbrl/research-rainfallradar"
Documentation = "https://github.com/sbrl/research-rainfallradar"
Repository = "https://github.com/sbrl/research-rainfallradar"
Issue = "https://github.com/sbrl/research-rainfallradar/issues"
Changelog = "https://github.com/sbrl/research-rainfallradar/releases"

[project.scripts]
rr = "src.deeplabv3_plus_test_rainfall"